# Using-FreeRTOS-with-the-Raspberry-Pi-Pico

./: CMakeLists.txt
